# 01-4-cognition-river-blueprints

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-QNLOO-SPL  PATENTS  README.md
P-01-Three-Layer-Separation-Architecture/: Cargo.toml  README.md
P-01-Three-Layer-Separation-Architecture/src/: asset.rs  cognition.rs  execution.rs  main.rs
P-02-Standardized-Cognitive-Protocol-Packaging/: Cargo.toml  README.md
P-02-Standardized-Cognitive-Protocol-Packaging/src/: compiler.rs  container.rs  interceptor.rs  main.rs
P-03-Local-Privacy-Right-Confirmation-and-Synchronization/: Cargo.toml  README.md
P-03-Local-Privacy-Right-Confirmation-and-Synchronization/src/: ledger.rs  local_zone.rs  main.rs  sandbox.rs
P-04-Cascading-Revenue-Auto-Settlement/: Cargo.toml  README.md
P-04-Cascading-Revenue-Auto-Settlement/src/: contract.rs  main.rs
P-05-Logic-Continuity-Sincerity-Audit/: Cargo.toml  README.md
P-05-Logic-Continuity-Sincerity-Audit/src/: gateway_proxy.rs  logic_actor.rs  main.rs  sincerity_audit.rs
P-06-Outcome-Based-Pricing-and-Settlement-System/: Cargo.toml  README.md
P-06-Outcome-Based-Pricing-and-Settlement-System/src/: gateway.rs  main.rs  routing_contract.rs  sandbox.rs
